<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/xulies_nb_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="@dimen/sp_14"
                android:text="@string/sequence" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@color/blue" />

            <TextView
                android:id="@+id/mfgnaem_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:gravity="center"
                android:textSize="@dimen/sp_14"
                android:text="@string/Business_Division" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@color/blue" />

            <TextView
                android:id="@+id/gongzhan_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="@dimen/sp_14"
                android:text="@string/station"/>

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@color/blue" />

            <TextView
                android:id="@+id/floor_tv2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="@dimen/sp_14"
                android:text="@string/floor" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@color/blue" />

            <TextView
                android:id="@+id/lines_nb_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="@dimen/sp_14"
                android:text="@string/Line" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@color/blue" />

            <TextView
                android:id="@+id/class_diff_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="@dimen/sp_14"
                android:text="@string/day_or_nig" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@color/blue" />

            <TextView
                android:id="@+id/datejiechi_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:textSize="@dimen/sp_14"
                android:text="@string/Date_Session" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/blue" />


    </LinearLayout>

</LinearLayout>