<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar_height"
        android:background="#3BB715"
        android:gravity="center_vertical" >

        <include layout="@layout/top_bar_item_pd" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="5"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_magin_5"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="0.3"
                android:gravity="center"
                android:textSize="@dimen/sp_14"
                android:text="@string/time" />

            <EditText
                android:id="@+id/check_type_time"
                android:layout_width="0dp"
                android:layout_height="@dimen/person_information_width"
                android:layout_weight="0.7"
                android:background="@drawable/shape_bottom_radius_no_top_line"
                android:ems="10"
                android:hint="@string/time"
                android:inputType="textPersonName"
                android:onClick="getWheel"
                android:paddingLeft="5dp"
                android:textSize="@dimen/sp_14"
                android:paddingRight="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_magin_5"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="0.3"
                android:gravity="center"
                android:textSize="@dimen/sp_14"
                android:text="@string/DayOrNight" />

            <RadioGroup
                android:id="@+id/check_type_DayOrNight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radio0"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.35"
                    android:textSize="@dimen/sp_14"
                    android:text="@string/day" />

                <RadioButton
                    android:id="@+id/radio1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.35"
                    android:textSize="@dimen/sp_14"
                    android:text="@string/night" />
                <RadioButton
                    android:id="@+id/radio2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.35"
                    android:textSize="@dimen/sp_14"
                    android:text="整天" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_magin_5"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="0.3"
                android:gravity="center"
                android:textSize="@dimen/sp_14"
                android:text="@string/Session" />

            <Spinner
                android:id="@+id/check_type_Session"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginLeft="3dp"
                android:layout_weight="0.5"
                android:background="@drawable/sprinn_examine_bg"
                android:paddingLeft="3dp" />

            <ImageButton
                android:id="@+id/imageButton6"
                android:layout_width="0dp"
                android:layout_height="@dimen/person_information_width"
                android:layout_weight="0.2"
                android:background="@null"
                android:src="@drawable/search_bt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/xulies_nb_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="@dimen/sp_14"
                android:text="@string/sequence" />

            <TextView
                android:id="@+id/mfgnaem_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:gravity="center"
                android:textSize="@dimen/sp_14"
                android:text="@string/Business_Division" />

            <TextView
                android:id="@+id/gongzhan_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="@dimen/sp_14"
                android:text="@string/station" />

            <TextView
                android:id="@+id/floor_tv2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="@dimen/sp_14"
                android:text="@string/floor" />

            <TextView
                android:id="@+id/lines_nb_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="@dimen/sp_14"
                android:text="@string/Line" />

            <TextView
                android:id="@+id/class_diff_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="@dimen/sp_14"
                android:text="@string/day_or_nig" />

            <TextView
                android:id="@+id/datejiechi_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:textSize="@dimen/sp_14"
                android:text="@string/Date_Session" />
        </LinearLayout>

        <View
            android:id="@+id/view_dow_more"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@color/green" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:orientation="vertical" >

            <ExpandableListView
                android:id="@+id/examine_more_listView6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:groupIndicator="@null" >
            </ExpandableListView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>